
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int spl_t ;
typedef int clock_sec_t ;
typedef int clock_nsec_t ;


 int clock_get_calendar_absolute_and_nanotime_locked (int *,int *,int *) ;
 int clock_lock () ;
 int clock_unlock () ;
 int splclock () ;
 int splx (int ) ;

void
clock_get_calendar_nanotime(
 clock_sec_t *secs,
 clock_nsec_t *nanosecs)
{
 spl_t s;

 s = splclock();
 clock_lock();

 clock_get_calendar_absolute_and_nanotime_locked(secs, nanosecs, ((void*)0));

 clock_unlock();
 splx(s);
}
