; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_clock.c_clock_get_calendar_nanotime.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_clock.c_clock_get_calendar_nanotime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @clock_get_calendar_nanotime(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = call i32 (...) @splclock()
  store i32 %6, i32* %5, align 4
  %7 = call i32 (...) @clock_lock()
  %8 = load i32*, i32** %3, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = call i32 @clock_get_calendar_absolute_and_nanotime_locked(i32* %8, i32* %9, i32* null)
  %11 = call i32 (...) @clock_unlock()
  %12 = load i32, i32* %5, align 4
  %13 = call i32 @splx(i32 %12)
  ret void
}

declare dso_local i32 @splclock(...) #1

declare dso_local i32 @clock_lock(...) #1

declare dso_local i32 @clock_get_calendar_absolute_and_nanotime_locked(i32*, i32*, i32*) #1

declare dso_local i32 @clock_unlock(...) #1

declare dso_local i32 @splx(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
